--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,8 +14,8 @@ const languages = [
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edgar Martinez</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=:G-Y6B8BZKV7T"
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZF71WDX0W"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -24,7 +24,7 @@ const languages = [
       }
       gtag("js", new Date());
 
-      gtag("config", ":G-Y6B8BZKV7T");
+      gtag("config", "G-PZF71WDX0W");
     </script>
   </head>
   <body
